--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   
-  "name": "reactform",
+  "name": "form",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://keerthivas90.github.io/React-Form",
+  "homepage": "https://keerthivas90.github.io/form",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
